[gd_scene load_steps=8 format=3 uid="uid://bd3c2cifqnudq"]

[ext_resource type="Script" path="res://assets/walking_enemy.gd" id="1_ai80b"]
[ext_resource type="Texture2D" uid="uid://dmnuluul5v0ms" path="res://textures/skulcho.png" id="1_wiubg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhn7f"]
size = Vector2(8, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5ej4"]
size = Vector2(12, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7seh6"]
size = Vector2(50, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56dkc"]
size = Vector2(50, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtguk"]
size = Vector2(8, 8)

[node name="walkingEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 9
script = ExtResource("1_ai80b")
SPEED = 100.0

[node name="collisionHead" type="CollisionShape2D" parent="."]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_hhn7f")

[node name="collisionAtack" type="CollisionShape2D" parent="." groups=["enemy"]]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_j5ej4")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_wiubg")

[node name="leftDetect" type="ShapeCast2D" parent="."]
position = Vector2(-31, -7)
shape = SubResource("RectangleShape2D_7seh6")
target_position = Vector2(0, 0)
collision_mask = 4

[node name="rightDetect" type="ShapeCast2D" parent="."]
position = Vector2(31, -7)
shape = SubResource("RectangleShape2D_56dkc")
target_position = Vector2(0, 0)
collision_mask = 4

[node name="hitBox" type="ShapeCast2D" parent="."]
shape = SubResource("RectangleShape2D_dtguk")
target_position = Vector2(0, -5)
